<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".MainActivity"
    tools:ignore="SpeakableTextPresentCheck">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/form_pengis"
            android:layout_width="188dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/form_pengis"
            android:textAppearance="@style/form_pengis"
            android:fontFeatureSettings="pnum, lnum"
            android:gravity="top"
            />
        <RelativeLayout
            android:id="@+id/rectangle_5"
            android:layout_width="328dp"
            android:layout_height="94dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:background="@color/yellow1"
            >

            <View
                android:id="@+id/ellipse_76"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="-40dp"
                android:layout_marginTop="-55dp"
                android:background="@drawable/bullat" />
            <TextView
                android:id="@+id/txtinf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Info"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtinf"
                android:layout_marginTop="10dp"
                android:text="@string/form_beriku" />
        </RelativeLayout>
        <TextView
            android:id="@+id/jenis_tes_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/jenis_tes_h"
            android:textAppearance="@style/jenis_tes_h"
            android:gravity="top"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            >
            <RadioButton
                android:id="@+id/radiorapid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rapid Test"
                />
            <RadioButton
                android:id="@+id/radiopcr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PCR"
                />
        </RadioGroup>
        <TextView
            android:id="@+id/tanggal_ter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/tanggal_ter"
            android:textAppearance="@style/tanggal_ter"
            android:gravity="top"
            />
        <Button
            android:id="@+id/datePickerButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="Pilih Tanggal"
            android:textColor="@color/gray"
            style="?android:spinnerStyle"
            android:layout_marginLeft="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="10dp"
            android:onClick="openDatePicker"/>
        <TextView
            android:id="@+id/nik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/nik"
            android:textAppearance="@style/nik"
            android:gravity="top"
            />
        <EditText
            android:id="@+id/edtnik"
            android:inputType="textCapWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:hint="@string/masuknik"
            android:maxLength="15"
            />
        <TextView
            android:id="@+id/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:text="nama"
            android:textAppearance="@style/nama"
            android:gravity="top"
            />
        <EditText
            android:id="@+id/edtbiodata"
            android:inputType="textCapWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:hint="@string/nama"
            android:maxLength="15"
            />
        <TextView
            android:id="@+id/tanggal_lah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/tanggal_ter"
            android:textAppearance="@style/tanggal_ter"
            android:gravity="top"
            />
        <Button
            android:id="@+id/datePickerButton1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="Pilih Tanggal"
            android:textColor="@color/gray"
            style="?android:spinnerStyle"
            android:layout_marginLeft="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="10dp"
            android:onClick="openDatePicker"/>

        <TextView
            android:id="@+id/jenis_tes_h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/jenis_tes_h2"
            android:textAppearance="@style/jenis_tes_h"
            android:gravity="top"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            >
            <RadioButton
                android:id="@+id/radiolaki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Laki-Laki"
                />
            <RadioButton
                android:id="@+id/radioperem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Perempuan"
                />
        </RadioGroup>
        <TextView
            android:id="@+id/jenis_tes_h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/jenis_tes_h3"
            android:textAppearance="@style/jenis_tes_h"
            android:gravity="top"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            >
            <RadioButton
                android:id="@+id/radioor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Orang Tua"
                />
            <RadioButton
                android:id="@+id/radiosu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Suami/Istri"
                />
            <RadioButton
                android:id="@+id/radioan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Anak"
                />
            <RadioButton
                android:id="@+id/radioker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kerabat Lainya"
                />
        </RadioGroup>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dengan_ini_"/>
        <TextView
            android:id="@+id/selanjutnya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="selanjutnya"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="25dp"
            android:background="@drawable/kotak_putih"
            />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>